--- a/malindu-portfolio/index.html
+++ b/malindu-portfolio/index.html
@@ -7,7 +7,7 @@
         <meta content="Free Website Template" name="keywords">
         <meta content="Free Website Template" name="description">
 
-        <!-- Favicon -->
+        <!-- Favicon 2 -->
         <link href="img/favicon.ico" rel="icon">
 
         <!-- Google Font -->
