--- a/malindu-portfolio/index.html
+++ b/malindu-portfolio/index.html
@@ -312,7 +312,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-2 wow fadeInUp" data-wow-delay="0.4s">
+                    <!-- <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-2 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="portfolio-wrap">
                             <div class="portfolio-img">
                                 <img src="img/movie_ticket_app_banner.png"  alt="Image">
@@ -322,8 +322,8 @@
                                 <a class="btn" href="img/portfolio-3.jpg" data-lightbox="portfolio">+</a>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-2 wow fadeInUp" data-wow-delay="0.6s">
+                    </div> -->
+                    <!-- <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-2 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="portfolio-wrap">
                             <div class="portfolio-img">
                                 <img src="img/movie_ticket_app_banner.png"  alt="Image">
@@ -333,7 +333,7 @@
                                 <a class="btn" href="img/portfolio-4.jpg" data-lightbox="portfolio">+</a>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-2 wow fadeInUp" data-wow-delay="0.8s">
                         <div class="portfolio-wrap">
                             <div class="portfolio-img">
@@ -345,7 +345,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-2 wow fadeInUp" data-wow-delay="1s">
+                    <!-- <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-2 wow fadeInUp" data-wow-delay="1s">
                         <div class="portfolio-wrap">
                             <div class="portfolio-img">
                                 <img src="img/movie_ticket_app_banner.png"  alt="Image">
@@ -355,7 +355,7 @@
                                 <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
