--- a/malindu-portfolio/index.html
+++ b/malindu-portfolio/index.html
@@ -69,7 +69,7 @@
                             </div>
                             <div class="hero-btn">
                                 <a class="btn" href="">Hire Us</a>
-                                <a class="btn" href="">Contact Us</a>
+                                <a class="btn" href="tel:+940770689766">Contact Us</a>
                             </div>
                         </div>
                     </div>
