--- a/malindu-portfolio/index.html
+++ b/malindu-portfolio/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Mobile Studio</title>
+        <title>MobileStudio</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Free Website Template" name="keywords">
         <meta content="Free Website Template" name="description">
@@ -29,7 +29,7 @@
         <div class="navbar navbar-expand-lg bg-light navbar-light">
             <div class="container-fluid">
 
-                <a href="index.html" class="navbar-brand">Mobile Studio</a>
+                <a href="index.html" class="navbar-brand">MobileStudio</a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -68,7 +68,7 @@
                                 <div class="typed-text">Crafting Mobile Apps</div>
                             </div>
                             <div class="hero-btn">
-                                <a class="btn" href="">Hire Us</a>
+                                <a class="btn" href="tel:+940770689766">Hire Us</a>
                                 <a class="btn" href="tel:+940770689766">Contact Us</a>
                             </div>
                         </div>
@@ -723,11 +723,11 @@
                             <!-- <p>info@example.com</p> -->
                         </div>
                         <div class="footer-social">
-                            <a href=""><i class="fab fa-twitter"></i></a>
-                            <a href=""><i class="fab fa-facebook-f"></i></a>
-                            <a href=""><i class="fab fa-youtube"></i></a>
-                            <a href=""><i class="fab fa-instagram"></i></a>
-                            <a href=""><i class="fab fa-linkedin-in"></i></a>
+                            <!-- <a href=""><i class="fab fa-twitter"></i></a> -->
+                            <!-- <a href="https://www.facebook.com/profile.php?id=61558060155081&mibextid=LQQJ4d"><i class="fab fa-facebook-f"></i></a> -->
+                            <!-- <a href=""><i class="fab fa-youtube"></i></a> -->
+                            <a href="https://www.instagram.com/mobilestudiolk/"><i class="fab fa-instagram"></i></a>
+                            <!-- <a href=""><i class="fab fa-linkedin-in"></i></a> -->
                         </div>
                     </div>
                 </div>
