--- a/malindu-portfolio/index.html
+++ b/malindu-portfolio/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>MobileStudio</title>
+        <title>Mobile Studio</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Free Website Template" name="keywords">
         <meta content="Free Website Template" name="description">
@@ -717,7 +717,7 @@
             <div class="container-fluid">
                 <div class="container">
                     <div class="footer-info">
-                        <h2>MobileStudio</h2>
+                        <h2>Mobile Studio</h2>
                         <!-- <h3>123 Street, New York, USA</h3> -->
                         <div class="footer-menu">
                             <p>Reach out at 077 068 9766</p>
@@ -736,7 +736,7 @@
                     <p>&copy; <a href="#">MobileStudio</a>, All Right Reserved | 
 					
 					<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                    Designed By Malindu Kirindegamaarachchi</a></p>
+                    Designed By Mobile Studio</a></p>
                 </div>
             </div>
         </div>
